--- a/exercícios/ex026/mq001/estilos/tela.css
+++ b/exercícios/ex026/mq001/estilos/tela.css
@@ -4,3 +4,39 @@
     margin: 0;
     padding: 0;
 }
+
+html{
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.8em;
+}
+
+header{
+    background-color: #808080;
+}
+
+header h1{
+    text-align: center;
+    padding: 30px;
+}
+
+menu{
+    background-color: #636363;
+}
+
+menu ul li{
+    display: inline-block;
+    background-color: #444444;
+    color: #fff;
+    padding: 8px;
+}
+
+main article{
+    max-width: 600px;
+    display: block;
+    margin: auto;
+    padding: 20px;
+}
+
+p{
+    margin: 15px;
+}
