--- a/exercícios/ex026/mq004/estilos/principal.css
+++ b/exercícios/ex026/mq004/estilos/principal.css
@@ -7,5 +7,44 @@ html{
 
 body{
     background: #000 url(../imagens/back-phone.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
     background-size: cover;
+    background-attachment: fixed;
+    color: #000;
+}
+
+main{
+    text-align: center;
+    width: 350px;
+    height: 300px;
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 10px;
+    margin: auto;
+}
+
+img{
+    display: block;
+    margin: auto;
+}
+
+img#phone{
+    display: block;
+}
+
+img#tablet{ 
+    display: none;
+}
+
+img#pc{
+    display: none;
+}
+
+img#tv{
+    display: none;
+}
+
+img#print{
+    display: none;
 }
