--- a/exercícios/ex026/mq004/estilos/phone.css
+++ b/exercícios/ex026/mq004/estilos/phone.css
@@ -6,25 +6,24 @@ html{
 }
 
 body{
-    background: #000 url(../imagens/back-phone.jpg);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
+    background: url(../imagens/back-phone.jpg) no-repeat center center;
     background-attachment: fixed;
-    color: #000;
+    background-size: cover;
 }
 
 main{
-    text-align: center;
     width: 350px;
     height: 300px;
-    background-color: #fff;
-    border-radius: 5px;
-    padding: 10px;
     margin: auto;
+    background-color: #fff;
+    color: #000;
+    text-align: center;
+    padding: 10px;
+    margin-top: -5px;
+    border-radius: 10px;
 }
 
-img{
+main img{
     display: block;
     margin: auto;
 }
@@ -33,7 +32,7 @@ img#phone{
     display: block;
 }
 
-img#tablet{ 
+img#tablet{
     display: none;
 }
 
