--- a/exercícios/ex026/mq004/estilos/phone.css
+++ b/exercícios/ex026/mq004/estilos/phone.css
@@ -15,7 +15,7 @@ main{
     width: 350px;
     height: 300px;
     margin: auto;
-    background-color: #fff;
+    background-color: #ffffffda;
     color: #000;
     text-align: center;
     padding: 10px;
