--- a/exercícios/ex026/mq006/estilos/geral.css
+++ b/exercícios/ex026/mq006/estilos/geral.css
@@ -1,5 +1,62 @@
 @charset "UTF-8";
 
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 html,body{
     background-color: #d3d3d3;
+}
+
+header{
+    background-color: #808080;
+}
+
+header h1{
+    text-align: center;
+    padding: 10px;
+}
+
+menu{
+    display: block;
+}
+
+menu > ul{
+    list-style-type: none;
+}
+
+menu > ul > li > a{
+    display: block;
+    background-color: #5a5a5a;
+    padding: 10px;
+    text-decoration: none;
+    text-align: center;
+    border-top: 2px solid #808080;
+    color: #fff;
+}
+
+menu > ul > li > a:hover{
+    background-color: #808080;
+}
+
+main{
+    width: 70vw;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    margin: auto;
+    margin-top: 10px;
+}
+
+article > h2{
+    padding-bottom: 10px;
+}
+
+article > p{
+    text-align: justify;
+    line-height: 1.6em;
+    padding: 10px;
+    text-indent: 20px;
 }
