--- a/exercícios/ex026/mq006/estilos/restantes.css
+++ b/exercícios/ex026/mq006/estilos/restantes.css
@@ -15,10 +15,12 @@ menu > ul > li{
 menu > ul > li > a{
     border-top: 0px;
     padding: 10px;
-    background-color: #969696;
+    background-color: #757575;
     color: #fff;
 }
 
 menu > ul > li > a:hover{
-    background-color: #727272;
+    background-color: #afafaf;
+    border: 1px solid #3f3f3f0c;
+    box-shadow: 1px 0px 1px #0000003d;
 }
